# ffmpeg_player

./: .gitignore  CMakeLists.txt
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/: main.cpp
src/tools/: display_texture.cpp  display_texture.h  load_ffmpeg.cpp  load_ffmpeg.h
